--- a/SignitAPI.Client.IntegrationSample/Templates/IndexTemplate.html
+++ b/SignitAPI.Client.IntegrationSample/Templates/IndexTemplate.html
@@ -17,6 +17,7 @@
     <ul>
         <li ng-repeat="f in file"><span >File used:</span>{{f.name}} {{f.$error}} {{f.$errorParam}}</li>
     </ul>
-    <input type="submit" value="Sign this document"/>
+    <div ng-show="loading">Uploading. Please wait</div>
+    <input type="submit" ng-show="!loading" value="Sign this document"/>
 </form>
 
